# note-taking-app-api-actixweb

./: .gitignore  Makefile  README.md
api/: Cargo.toml
api/.sqlx/: query-0b13c78b9181a5e0b6907e21cd0f6c8c9248b1e2c8d47432630ee171c7ec4d09.json  query-615715080b02b1740316387823912ed98fb75736fc7ef85461f9cf5a9629a938.json  query-bc9c7d65bf180d74e0b026d3816f05e967821f7da7e6833569e276e325fb8c65.json  query-c1ae31a443b3382d0648ab9094ed9ca3ddf776aa6821400828c395468b25d0bb.json  query-d0d4103b18432d12beff66c68ce5defdca6272a502d2ed06045bbcb507feefad.json
api/src/: domain.rs  error.rs  main.rs  note.rs
db/: Cargo.toml
db/migrations/: 20231124190400_note.sql
db/src/: lib.rs
service/: Cargo.toml
service/src/: lib.rs
