[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.74"
serde = "1.0"
utoipa = "3"
service = { path = "../service" }
db = { path = "../db" }
validator = "0.16.1"
chrono = "0.4.26"
