[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.74"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
serde_derive = "1.0.163"
utoipa = { version = "3", features = ["actix_extras"] }
futures = "0.3.28"
utoipa-swagger-ui = { version = "3.1.5", features = ["actix-web"] }
utoipa-redoc = { version = "0.1.0", features = ["actix-web"] }
utoipa-rapidoc = { version = "0.1.0", features = ["actix-web"] }
service = { path = "../service" }
db = { path = "../db" }
chrono = "0.4.26"
validator = "0.16.1"
futures-util = "0.3.28"

[dependencies.uuid]
version = "1.4.1"
features = [
  "v4",
  "fast-rng",
  "macro-diagnostics",
]

[dev-dependencies]
async-trait = "0.1.73"
mockall = "0.11.4"
